Bug 1776563 - Remove nsDMABufDevice::IsDMABufEnabled(), r=stransky, a=dmeehan

We do not need a GBM device any more in child processes and in several
cases we're also not allowed to open it any more by the sandbox.

For remaining cases were we do need it in the parent process (the
fallback path in `SharedSurface_DMABUF::Create`, used for WebGL and the
experimental `widget.dmabuf-textures.enabled` feature, as well as in
`WaylandBufferDMABUF::Create` used by `gfx.webrender.compositor`), we
already call `Configure()` in `gfxPlatformGtk::InitDmabufConfig()` and set
`gfx::gfxVars::UseDMABuf` accordingly, making
`nsDMABufDevice::IsDMABufWebGLEnabled()` still return the correct value.

Differential Revision: https://phabricator.services.mozilla.com/D150324